NXP-32875: cleanup / format